# syswatch

./: .env.example  Prd.md  README.md  pyproject.toml
src/syswatch/: analyst.py  cli.py  collector.py  config.py  renderer.py
tests/: test_analyst.py  test_collector.py
